1.07/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p107-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p107
  template:
    metadata:
      labels:
        app: p107
    spec:
      containers:
        - name: p107
          image: sernalen/k8scourse-p107:100
