1.07/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p107-svc
spec:
  type: ClusterIP
  selector:
    app: p107
  ports:
    - port: 2344
      protocol: TCP
      targetPort: 8080
